--- a/src/assets/styles/view-style/login.scss
+++ b/src/assets/styles/view-style/login.scss
@@ -1,5 +1,5 @@
 .login {
-  background: url("../../assets/images/login.jpg") no-repeat;
+  background: url("../../../assets/images/login.jpg") no-repeat;
   background-size: cover;
 
   .model {
